<resources>
    <string name="app_name">LWP</string>
    <string name="action_settings">Settings</string>
    <string name="action_startlwp">Set LiveWallpaper</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="ask_grant">Need the permission of read and write,click the button below to authorize</string>
    <string name="go_setting_grant">If authorize fail,click the button below to enter the app info activity.Then open the app\'s full storage</string>
    <string name="grant_btn">Grant</string>
    <string name="go_setting_btn">Go Setting</string>
    <string name="close">close</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="error_share">Error Share</string>
    <string name="delete">delete</string>
    <string name="select">Selected 0</string>
    <string name="item_image">item_image</string>
    <string name="load_from_zip">Load info from zip</string>

    <string name="add_widget">Add widget</string>
    <string name="wallpaper_settings">Settings</string>
    <string name="shortcuts_fail">Fail</string>
    <string name="set_live_wallpaper">Set Live WP</string>
    <string name="change_wallpaper">Random</string>
</resources>
