<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ask_grant"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/grant_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grant_btn"
        android:theme="@style/Widget.AppCompat.Button.Borderless" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/go_setting_grant"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/go_setting_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_setting_btn"
        android:theme="@style/Widget.AppCompat.Button.Borderless" />
</LinearLayout>